<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context=".FeedbackActivity"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/topicMW"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:hint="@string/topic_feedback"
        android:gravity="center|start"
        ></com.google.android.material.textfield.TextInputEditText>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/emailFeedback"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:hint="@string/email_feedback"
        android:gravity="center|start"
        ></com.google.android.material.textfield.TextInputEditText>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/feedbackMsgMW"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:hint="@string/feedback"
        android:gravity="center|start"
        ></com.google.android.material.textfield.TextInputEditText>

    <Button
        android:id="@+id/sendMW"
        android:backgroundTint="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send"
        android:layout_gravity="center"
        android:textColor="@color/black">

    </Button>

</LinearLayout>