<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/white"
    android:orientation="vertical"

    tools:context=".PlaysongsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_weight="1"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/imgbtn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:contentDescription="Back"
            android:paddingStart="5dp"
            android:tint="@color/black"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_back">

        </androidx.appcompat.widget.AppCompatImageButton>

        <TextView
            android:id="@+id/txt_song_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/world_of_music"
            android:textColor="@color/black"
            android:textSize="20sp"></TextView>


        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/imgbtn_heart"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginRight="10dp"
            android:background="@android:color/transparent"
            android:scaleType="fitXY"
            android:src="@drawable/ic_heart_empty"
            android:tint="@android:color/holo_red_dark">

        </androidx.appcompat.widget.AppCompatImageButton>

    </LinearLayout>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imgv_playSongView"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:src="@drawable/splash_screen"
        app:shapeAppearanceOverlay="@style/curved"
        app:strokeColor="#78BDDC"
        app:strokeWidth="7dp">

    </com.google.android.material.imageview.ShapeableImageView>

    <TextView
        android:id="@+id/tv_songNamePlayer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:gravity="center"
        android:hint="@string/name_song"
        android:layout_weight="1"
        android:textColor="@color/black"
        android:textSize="18sp">

    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_weight="1"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:orientation="horizontal">

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/btn_backPlaySong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:pointerIcon="arrow"
            app:icon="@drawable/ic_back"
            app:iconSize="30dp">

        </com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/btn_pause_playSong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="35dp"
            android:backgroundTint="@color/red"
            app:backgroundTint="@android:color/holo_red_dark"
            app:icon="@drawable/ic_pause"
            app:iconSize="40dp"
            app:iconTint="@color/white"

            app:shapeAppearanceOverlay="@style/curved">

        </com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/btn_playNextSong"
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:icon="@drawable/ic_next"
            app:iconSize="30dp">

        </com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_timeRunSeekBarStart"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/start_tv"
            android:textColor="@color/black"
            android:gravity="center"
            android:textSize="15sp">

        </TextView>

        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/sb_SeekBar"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

        </androidx.appcompat.widget.AppCompatSeekBar>

        <TextView
            android:id="@+id/tv_timeRunSeekBarEnd"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/end_tv"
            android:textColor="@color/black"
            android:gravity="center"
            android:textSize="15sp"></TextView>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">
        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btn_repeatSongPlayer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_repeat"
            android:background="@android:color/transparent"
            android:tint="#E91E63"
            android:layout_weight="1"
            android:contentDescription="@string/repeat_btn">

        </androidx.appcompat.widget.AppCompatImageButton>

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btn_eqPlaySong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_eq"
            android:background="@android:color/transparent"
            android:tint="#E91E63"
            android:layout_weight="1"
            android:contentDescription="@string/equalizer_btn">

        </androidx.appcompat.widget.AppCompatImageButton>

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btn_timerPlaySong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_timer"
            android:background="@android:color/transparent"
            android:tint="#E91E63"
            android:contentDescription="@string/time_btn"
            android:layout_weight="1">

        </androidx.appcompat.widget.AppCompatImageButton>

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btn_sharePlaySong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_share"
            android:background="@android:color/transparent"
            android:tint="#E91E63"
            android:layout_weight="1"
            android:contentDescription="@string/share_btn">

        </androidx.appcompat.widget.AppCompatImageButton>

    </LinearLayout>
</LinearLayout>