<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ln_min15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_min15"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_margin="8dp"
            android:contentDescription="@string/min_15"
            android:src="@drawable/ic_timer"
            app:tint="@color/pink"></ImageView>

        <TextView
            android:id="@+id/tv_min15"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:padding="8dp"
            android:text="@string/min_15"
            android:textSize="18dp">

        </TextView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ln_min30"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_min30"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_margin="8dp"
            android:contentDescription="@string/min_30"
            android:src="@drawable/ic_timer"
            app:tint="@color/pink"></ImageView>

        <TextView
            android:id="@+id/tv_min30"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:padding="8dp"
            android:text="@string/min_30"
            android:textSize="18dp">

        </TextView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ln_min60"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_min60"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_margin="8dp"
            android:contentDescription="@string/min_60"
            android:src="@drawable/ic_timer"
            app:tint="@color/pink"></ImageView>

        <TextView
            android:id="@+id/tv_min60"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:padding="8dp"
            android:text="@string/min_60"
            android:textSize="18dp">

        </TextView>

    </LinearLayout>


</LinearLayout>