<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.Spotify"
    android:background="@color/white"
    android:fitsSystemWindows="true"

    tools:context=".MainActivity"
    tools:openDrawer="start">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/fgm_NowPlaying"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_shuffle"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/shuffle_btn"
                    android:drawableTop="@drawable/ic_shuffle"
                    android:text="@string/shuffle_btn"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="17dp"
                    android:textStyle="bold">

                </androidx.appcompat.widget.AppCompatButton>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_favourite"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/favourites_btn"
                    android:drawableTop="@drawable/ic_favorite"
                    android:text="@string/favourites_btn"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="17dp"
                    android:textStyle="bold">

                </androidx.appcompat.widget.AppCompatButton>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_playlist"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/playlist_btn"
                    android:drawableTop="@drawable/ic_playlist"
                    android:text="@string/playlist_btn"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="17dp"
                    android:textStyle="bold">

                </androidx.appcompat.widget.AppCompatButton>

            </LinearLayout>

            <TextView
                android:id="@+id/tv_totalSongs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/total_songs"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"></TextView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcv_list_songs"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:scrollbarThumbVertical="@drawable/ic_scrolling"
                android:scrollbars="vertical" />
        </LinearLayout>

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/fgm_NowPlaying"
            android:name="com.example.spotify.NowPlayingFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/linearLayout2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/linearLayout2"
            tools:layout="@layout/fragment_now_playing">

        </androidx.fragment.app.FragmentContainerView>
    </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.navigation.NavigationView
            android:id="@+id/nav_main"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:fitsSystemWindows="true"
            app:headerLayout="@layout/layout_nav_header"
            app:menu="@menu/values"></com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>