<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="2dp"
    android:theme="@style/Base.Theme.Spotify1"
    android:background="@android:color/background_light"
    tools:context=".FavouriteActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#E91E63"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btn_back_favourite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/back_btn"
            android:src="@drawable/ic_back"
            android:tint="@color/white">

        </androidx.appcompat.widget.AppCompatImageButton>

        <TextView
            android:id="@+id/txt_favourite"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/favourites_btn"
            android:gravity="center"
            android:text="@string/favourites_btn"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"></TextView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


    </LinearLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/btn_shuffle_favourite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/favourites_btn"
        app:icon="@drawable/ic_shuffle"
        app:iconSize="35dp"
        app:iconTint="#E91E63"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.954"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.958"
        app:strokeColor="#E91E63"
        app:strokeWidth="2dp">


    </com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton>
    <TextView
        android:id="@+id/instructionFV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/favourite_note"
        android:textSize="20sp"
        android:padding="16dp"
        android:gravity="center"

        />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcv_favouriteSong"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        android:scrollbarThumbVertical="@drawable/ic_scrolling"
        android:scrollbars="vertical"
        android:paddingBottom="40dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>