<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Base.Theme.Spotify1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ic_music_player_background"
    tools:context=".PlaylistDetailsActivity">

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#E91E63"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btn_back_playlist_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/back_btn"
            android:src="@drawable/ic_back"
            android:tint="@color/white">

        </androidx.appcompat.widget.AppCompatImageButton>

        <TextView
            android:id="@+id/txt_playlist_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:singleLine="true"
            android:text="playlist_name"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"></TextView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout1">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imgv_detailPlaylistSong"
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:scaleType="fitCenter"
            android:src="@drawable/splash_screen"></com.google.android.material.imageview.ShapeableImageView>

        <TextView
            android:id="@+id/tv_playlistDetailName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="5dp"
            android:background="@color/pink"
            android:gravity="center|start"
            android:text="@string/playlist_name"
            android:textColor="@color/white"
            android:textSize="16dp">

        </TextView>


    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcv_PlaylistDetailSong"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="150dp"
        android:paddingTop="150dp"
        android:scrollbarThumbVertical="@drawable/ic_scrolling"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_add_playlist"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/add_playlist"
            android:drawableTop="@drawable/ic_add"
            android:text="@string/add_playlist"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="17dp"
            android:textStyle="bold"
            tools:ignore="RtlHardcoded">

        </androidx.appcompat.widget.AppCompatButton>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_remove_playlist"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/remove_all"
            android:drawableTop="@drawable/ic_delete"
            android:text="@string/remove_all"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="17dp"
            android:textStyle="bold"
            tools:ignore="RtlHardcoded">

        </androidx.appcompat.widget.AppCompatButton>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/btn_shuffle_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:visibility="invisible"
        app:icon="@drawable/ic_shuffle"
        app:iconSize="35dp"
        app:iconTint="#E91E63"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.954"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.808"
        app:strokeColor="#E91E63"
        app:strokeWidth="2dp">

    </com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton>
</androidx.constraintlayout.widget.ConstraintLayout>